2012-04-11  Francesco Lannutti
 * src/spicelib/analysis/cktacct.c
  Corrected a bug that caused segmentation fault
   if the ACCT was called before a simulation

2012-03-18  Francesco Lannutti
 * src/maths/KLU/Makefile.am
 * src/maths/SuperLU/Makefile.am
 * src/maths/UMFPACK/Makefile.am
 * src/include/ngspice/Makefile.am
  Corrected a bug which didn't let ngspice compile in an
   external folder (e.g. "sourcedir/ngspice-klu-release")
 * configure.ac
  Added a check for ATLAS library when SuperLU is selected
   as solver

2012-03-14  Stefano Perticaroli and Francesco Lannutti
 * src/spicelib/analysis/dcpss.c
  The PSS Analysis Algorithm has been entirely reviewed and now
   it works very well. Some additional files have been modified,
   like configure.ac, plotting strategies and so on...

2012-03-12  Francesco Lannutti
 * src/maths/UMFPACK
  Added UMFPACK as new experimental linear solver
   Some files modified due to UMFPACK integration
   Some bugs and minor/cosmetic fixed
   TODO: Correct cktacct.c to let it print fill-ins
         properly using UMFPACK or SuperLU

2012-02-23  Francesco Lannutti
 * src/maths/SuperLU
  Added SuperLU as new experimental linear solver
   Several files added and/or modified

2012-02-22  Francesco Lannutti
 * src/frontend/outitf.c
 * src/frontend/typesdef.c
 * src/spicelib/analysis/dcpss.c
  Corrected the plot type in the PSS Frequency Domain
   and the plot name in the PSS Analysis

 * src/Makefile.am
 * src/maths/KLU/Makefile.am
 * src/maths/KLU/klusmp.c (new file)
 * src/maths/sparse/Makefile.am
 * src/maths/sparse/spsmp.c
  SMP to solver interface separated:
   spsmp.c is the original interface between SMP and Sparse
   klusmp.c is the new one between SMP and KLU

 * src/spicelib/analysis/cktsens.c
  Corrected a bug during the Sensitivity Analysis
   when NG-Spice is compiled with KLU enabled
 * src/spicelib/parser/inp2dot.c
  Corrected a minus-cosmetic bug in the name of
   the PSS Analysis

2012-02-21  Francesco Lannutti